<resources>

    <string name="app_name">taxCalculator</string>
    <string name="tvCalculator">Calculadora de impuestos</string>
    <string name="tvDescription">Por favor ingrese seleccione el tipo de impuesto que desea calcular:</string>
    <string name="btn1">Impuesto predial</string>
    <string name="btn2">Impuesto de vehículo</string>
    <string name="btn3">Retención en la fuente</string>
    <string name="btnCalculatorRetention">Calcular retencion en la fuente</string>
    <string name="txtVBaseUVT">Base UVT</string>
    <string name="txtVBaseMinimaPesos">Base minima en pesos</string>
    <string name="txtVPorcentajeRetencion">Porcentaje de retención</string>
    <string name="txtMensajeSalidaRetencion">La retencion es de</string>
    <string name="txtViewTypeHouse">Tipo de predio</string>
    <string name="txtViewValueHouse">Valor</string>
    <string name="tv1">Valor a pagar Trimestral es de: </string>
    <string name="tv2">Valor a pagar Anual con descuento es de:</string>
    <string name="btnCalculate">Calcular predial</string>
    <string name="txtViewTrimester">Calcular predial</string>
    <string name="txtViewAnnual">Calcular predial</string>
    <string name="tvVehicle">Impuesto vehicular</string>
    <string name="tvVehicleDesc">Por favor, seleccione los datos de su vehículo:</string>
    <string name="tvTypeVehicle">Tipo de vehículo</string>
    <string name="tvService">Servicio del vehículo:</string>
    <string name="tvValueVehicle">Avalúo del vehículo:</string>
    <string name="btnCalculateTaxVehicle">Calcular impuestos</string>
    <string name="tvDesValue">El valor de impuestos a pagar es de:</string>
    <string name="tvValueDefault">$0</string>

</resources>