<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvCalculator"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:textStyle="bold" android:textAlignment="center"
            android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView2"/>
    <TextView
            android:text="@string/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <Button
            android:text="@string/btn1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/btnPropietyTax"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent" android:onClick="goTo"/>
    <Button
            android:text="@string/btn2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/btnVehicule"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/btnPropietyTax"
            android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent" android:onClick="goTo"/>
    <Button
            android:text="@string/btn3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/btnRetention"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btnVehicule" android:onClick="goTo"/>

</androidx.constraintlayout.widget.ConstraintLayout>