<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".VehicleActivity">

    <TextView
            android:text="@string/tvVehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/tvVehicle"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp" android:textStyle="bold"
            android:textAlignment="center"/>
    <TextView
            android:text="@string/tvVehicleDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/tvVehicle"
            android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/tvTypeVehicle"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/tvType"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/sprType"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvType" android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/tvService"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/tvService"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/sprType"
            android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/sprService"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvService" android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck"/>
    <TextView
            android:text="@string/tvValueVehicle"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/tvValue"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/sprService"
            android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/etValueVehicle"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvValue" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" tools:ignore="SpeakableTextPresentCheck"
            android:minHeight="48dp" android:importantForAutofill="no"/>
    <Button
            android:text="@string/btnCalculateTaxVehicle"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/button"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/etValueVehicle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:onClick="calculateTax"/>
    <TextView
            android:text="@string/tvDesValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:textStyle="bold" android:textSize="16sp"/>
    <TextView
            android:text="@string/tvValueDefault"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/tvValueTax"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/button" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:textStyle="bold" android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/textView8" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0" android:textAlignment="viewEnd"/>
</androidx.constraintlayout.widget.ConstraintLayout>